--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+	<meta description="Découvrez le Mexique avec des voyages sur mesure et originaux au meilleur prix! Envie de Caraïbes, de jungle ou de culture maya? N'attendez plus!">
 	<title>Mexplorer, votre agence de voyage réceptive au Mexique</title>
 	<link href="img/favicon.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
