Add Italian language

--- a/cn/index.html
+++ b/cn/index.html
@@ -72,6 +72,7 @@
 						<li><a href="../index.html"><img src="../img/fr.png" alt=""></a></li>
 						<li><a href="../en/index.html"><img src="../img/en.png" alt=""></a></li>
 						<li><a href="../es/index.html"><img src="../img/es.png" alt=""></a></li>
+						<li><a href="../it/index.html"><img src="../img/it.png" alt=""></a></li>
 
 					</ul>
 					
