--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="container clearfix">
 				<!-- Logo -->
 				<div id="logo" class="fleft">
-					<a href="javascript:void(0);"><img src="../img/logo.png" alt=""/></a>
+					<a href="javascript:void(0);"><img src="img/logo.png" alt=""/></a>
 				</div>
 				<!-- Navigation -->
 				<div id="nav" class="fright">
@@ -74,6 +74,7 @@
 							<li><a href="en/index.html"><img src="img/en.png" alt=""></a></li>
 							<li><a href="cn/index.html"><img src="img/cn.png" alt=""></a></li>
 							<li><a href="es/index.html"><img src="img/es.png" alt=""></a></li>
+							<li><a href="it/index.html"><img src="img/it.png" alt=""></a></li>
 
 
 						</ul>
@@ -261,9 +262,9 @@
 				<div class="grid_12" style="margin-bottom: 0;">
 					<div class="africa box col4 hover-item">
 						<div class="view view-first">
-							<img onclick="location.href='mexcursion.php'" style="cursor:pointer;" class="imgTop" alt="Ipsum" src="/img/Pack_mexcursion_01.png"/>
+							<img onclick="location.href='mexcursion.php'" style="cursor:pointer;" class="imgTop" alt="Ipsum" src="img/Pack_mexcursion_01.png"/>
 							<div class="abs">
-								<a class="fancybox zoom info" href="../img/Pack_mexcursion_01.png"></a>
+								<a class="fancybox zoom info" href="img/Pack_mexcursion_01.png"></a>
 							</div>	
 						</div>
 						<div class="layer_txt center">
