Cambios en direccion y pagina de grupos en todos los idiomas

--- a/es/index.html
+++ b/es/index.html
@@ -435,12 +435,12 @@
 					<h4>Detalles de Contacto</h4>
 					<div class="clear"></div>
 					<ul class="foot_block_intouch">
-						<li class="touch_phone"><p>(+521) 999 225 7334</p></li>
-						<li class="touch_clock"><p>Lun - Sab 9:00am - 6:00 pm</p></li>
-						<li class="touch_mail"><a href="mailto:contact@mexplorer-dmc.com">contact@mexplorer-dmc.com</a></li>
-						<li class="touch_site"><a href="javascript:void(0);">www.mexplorer-dmc.com</a></li>
-						<li class="touch_adress"><p>C. 37a #25 por 14 y 16 Aguilas de Chuburna 97215 Merida Yucatan, Mexico</p></li>
-						<li class="facebook"><a href="http://facebook.com/mexplorerdmc" target="blank">http://facebook.com/mexplorerdmc</a></li>
+						<li class="touch_phone"><p>01 999 926 0039</p></li>
+							<li class="touch_clock"><p>Lun - Sab 9:00am - 6:00 pm</p></li>
+							<li class="touch_mail"><a href="mailto:contact@mexplorer-dmc.com">contact@mexplorer-dmc.com</a></li>
+							<li class="touch_site"><a href="javascript:void(0);">www.mexplorer-dmc.com</a></li>
+							<li class="touch_adress"><p>C. 10 #80-B entre Circuito Colonias y 13, Col. Itzimná, CP. 97100, Mérida Yucatán.</p></li>
+							<li class="facebook"><a href="http://facebook.com/mexplorerdmc" target="blank">http://facebook.com/mexplorerdmc</a></li>
 						
 					</ul>
 				</div>
